# esp-idf-nanopb

./: README.md
generate/: CMakeLists.txt
generate/main/: CMakeLists.txt  nanopb_test.cpp  simple.proto
no-generate/components/nanopb/: CMakeLists.txt
no-generate/main/: CMakeLists.txt  nanopb_test.cpp
